# chronos2

./: .env.sample.local  .gitIgnore  .gitignore  .gitmodules  .pre-commit-config.yaml  ReadME.md  chronos.service  deploy-dashboard.sh  deploy-edge.sh  deployment-readme.md  docker-compose.deployment.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  install.sh  setup-env.sh
chronos2/dashboard_backend/: .env.sample  .env.sample.local  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
chronos2/dashboard_backend/alembic/: env.py
chronos2/dashboard_backend/core/models/: __init__.py  boiler.py  set_point_lookup.py  value.py
chronos2/dashboard_backend/src/alembic/: env.py
chronos2/dashboard_backend/src/alembic/seeds/: chiller_data.py  value_data.py
chronos2/dashboard_backend/src/alembic/versions/: 8ef3c957fd59_create_table_user.py  c0b035f570d7_init_device_data.py  ffb68c387231_initial_migration.py
chronos2/dashboard_backend/src/api/: dependencies.py
chronos2/dashboard_backend/src/api/dto/: auth.py  dashboard.py
chronos2/dashboard_backend/src/api/routers/: auth_router.py  dashboard_router.py
chronos2/dashboard_backend/src/chronos/lib/: __init__.py  db.py  db_queries.py  modbus_client.py  root_logger.py
chronos2/dashboard_backend/src/core/chronos/: __init__.py  boiler.py  chiller.py  chronos.py  constant.py  device.py  valve.py
chronos2/dashboard_backend/src/core/common/: exceptions.py  repositories.py
chronos2/dashboard_backend/src/core/configs/: config.py  database.py  root_logger.py
chronos2/dashboard_backend/src/core/models/: __init__.py  boiler.py  chiller.py  history.py  set_point_lookup.py  setting.py  user.py  value.py
chronos2/dashboard_backend/src/core/repositories/: history_repository.py  setting_repository.py
chronos2/dashboard_backend/src/core/seeds/: init_boiler.py
chronos2/dashboard_backend/src/core/services/: boiler.py  (+4 more)
chronos2/dashboard_backend/tests/: test_auth.py  test_dashboard.py  test_edge_server.py  test_repositories.py
edge_server/: .env  .env.sample  Dockerfile  README.md  app.py  boiler_info.py  chronos-edge.service  chronos-edge.service.template  chronos.service  client.py  docker-compose.dev.yml  entrypoint.sh  env.template  install.sh  package-lock.json  package.json  post_install  pyproject.toml  requirements.txt  working-sync-server.py
edge_server/chronos/: app.py  boiler_modbus.py  chronos.py  config.py  data_models.py  devices.py  logging.py  mock_devices.py  registers.py  utils.py
edge_server/chronos/devices/: __init__.py  hardware.py  manager.py  mock.py
edge_server/chronos/lib/: __init__.py  actuators.py  config.py  config_parser.py  devices.py  logging.py  modbus_client.py
edge_server/chronos/mock_devices/: mock_data.py
edge_server/chronos/utils/: chronos_hardware_debug.py  temp.sh
edge_server/chronos/utils/modbus_sp/: bstat  bstat.c  change_sp.c  fr  graphic.c  run_change_sp.sh  sp.sh  toCompile.txt  tt-status.c  tt-status_ro.c
edge_server/chronos/utils/relayHelpers/: relayread.py  relaywrite.py
edge_server/data_files/: chronos.conf
edge_server/docs/: API.md  DEPLOYMENT.md
edge_server/src/: main.py
edge_server/src/api/: endpoints.py  routes.py
edge_server/src/core/: config.py  constants.py  controller.py  hardware.py  hvac_controller.py  logger.py  mock_hardware.py  modbus_handler.py  schemas.py  serial_handler.py
edge_server/src/core/hardware/: mock_hardware.py  modbus_client.py  serial_client.py
edge_server/tests/: conftest.py  test_api.py  test_app.py  test_device_manager.py  test_devices.py  test_hardware_temperature_limits.py  test_mock_devices.py  test_modbus_device.py  test_rate_limiter.py  test_read_only.py
(+271 files in other folders)
