[project]
name = "edge-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pyserial",
    "pymodbus",
    "python-dotenv",
    "pydantic",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "apscheduler==3.11.0",
]

[project.optional-dependencies]
dev = [
    "pip>=24.3.1",
    "ipython>=8.31.0",
    "pytest>=8.3.4",
    "ipython>=8.31.0",
    "nest-asyncio>=1.6.0",
    "pdbpp",
    "fastapi[standard]",
    "httpx",
]

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
